--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ description = "An HTML templating library for Rust"
 repository = "https://github.com/longshorej/rustags"
 readme = "README.md"
 keywords = ["html", "xml", "template", "templating"]
-license = "Apache License 2.0"
+license = "Apache-2.0"
 
 [dependencies]
