--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rust-tags"
-version = "0.1.0"
+version = "0.3.0"
 authors = ["Jason Longshore <tempremoved@dafdfa.com>"]
 description = "An HTML templating library for Rust"
 repository = "https://github.com/longshorej/rust-tags"
+homepage = "https://github.com/longshorej/rust-tags"
 readme = "README.md"
 keywords = ["html", "xml", "template", "templating"]
 license = "Apache License 2.0"
